temp branch: unfinished form validations

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -1,8 +1,10 @@
-<div id="site">
-    <h1>{{title}}</h1>
-    <hr/>
-    <menu></menu>
+<menuSection></menuSection>
+<div class="ui container">
+    <br/>
+    <h1 class="ui block inverted center aligned header">{{title}}</h1>
+
     <main></main>
-    <!--<footer></footer>-->
-    <!--<user></user>-->
+
+    <div class="push"></div>
 </div>
+<footerSection></footerSection>
