--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,9 +1,11 @@
 <!-- Main Frame -->
 <div class="ui container">
-    <h1>{{title}}</h1>
+    <!--<header>-->
+        <h1 class="ui header">{{title}}</h1>
+    <!--</header>-->
+
     <!-- dynamic content-->
     <!--<content></content>-->
 
     <router-outlet></router-outlet>
-    <!--<footer></footer>-->
 </div>
