--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -1,6 +1,7 @@
 <div class="ui fluid container">
-    <user>loading user...</user>
-    <product>loading product...</product>
+    <home></home>
+    <!--<user>loading user...</user>-->
+    <!--<product>loading product...</product>-->
     <!--<div class="ui three buttons">-->
     <!--<button class="ui active button">One</button>-->
     <!--<button class="ui button">Two</button>-->
